fixing formatting errors

--- a/publications/index.html
+++ b/publications/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Taylor Webb's website">
     <meta name="keywords" content="computational cognitive neuroscience, deep neural networks, metacognition, relational reasoning, visual attention">
     <meta name="author" content="Taylor Webb">
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family={PT Serif}' />
+    <meta name='viewport' content='width=device-width' />
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=PT Serif' />
     <link rel='stylesheet' href='../style.css' />
     <link rel='shortcut icon' href='../files/images/icon.png'>
 </head>
