--- a/research/index.html
+++ b/research/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Taylor Webb's website">
     <meta name="keywords" content="computational cognitive neuroscience, deep neural networks, metacognition, relational reasoning, visual attention">
     <meta name="author" content="Taylor Webb">
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family={PT Serif}' />
+    <meta name='viewport' content='width=device-width' />
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=PT Serif' />
     <link rel='stylesheet' href='../style.css' />
     <link rel='shortcut icon' href='../files/images/icon.png'>
 </head>
@@ -52,12 +52,12 @@
         <center><img src= "../files/images/ESBN_figure.png" height="350"/></center>
         <div class='textbox'>
             <p>
-                Deep neural networks have made remarkable breakthroughs in recent years, particularly when it comes to the ability to deal with high-dimensional, real-world perceptual inputs such as images. This approach, however, is often too strongly tied to the statistics of the data on which a model is trained, failing to capture the capacity for generalization that characterizes human cognition. In the field of machine learning, this is often referred to as the problem of <i>out-of-distribution (OOD) generalization</i> &mdash; the ability of a learning algorithm to generalize beyond the distribution of its training data. In human cognition, this ability is closely tied to a capacity for reasoning about <i>relations</i>. I have a strong interest in developing novel neural network methods that incorporate this human-like bias toward relational processing, motivated both by the potential to contribute to advances in AI, and to help us understand how the human brain achieves such generalization and abstraction. Examples of this approach include my work on <a href="../files/manuscripts/learning_extrapolation.pdf">context normalization</a> and <a href="../files/manuscripts/emergent_symbols.pdf">emergent symbol binding</a>.
+                Deep neural networks have made remarkable breakthroughs in recent years, particularly when it comes to the ability to deal with high-dimensional, real-world perceptual inputs such as images. This approach, however, is often too strongly tied to the statistics of the data on which a model is trained, failing to capture the capacity for generalization that characterizes human cognition. In the field of machine learning, this is often referred to as the problem of <i>out-of-distribution (OOD) generalization</i> &mdash; the ability of a learning algorithm to generalize beyond the distribution of its training data. In human cognition, this ability is closely tied to a capacity for reasoning about <i>relations</i>. A major focus of my research is the development of novel neural network methods that incorporate this human-like bias toward relational processing, which have the potential both to contribute to advances in AI, and to help us understand how the human brain achieves such generalization and abstraction. Examples of this approach include my work on <a href="../files/manuscripts/learning_extrapolation.pdf">context normalization</a> and <a href="../files/manuscripts/emergent_symbols.pdf">emergent symbol binding</a>.
         </div>
         <div class='section-title'>Visual Attention and Consciousness</div>
         <p></p>
         <p></p>
-        <center><img src= "../files/images/awareness_networks_figure.png" height="230"/></center>
+        <center><img src= "../files/images/attention_schema.png" height="230"/></center>
         <div class='textbox'>
             <p>
                 What is subjective experience, and how could it possibly result from the computational mechanisms in the brain? Together with Michael Graziano, I helped to develop and test the <a href="../files/manuscripts/attention_schema.pdf"><i>Attention Schema Theory (AST)</i></a>, a theoretical account of the computational and neural basis of subjective experience. According to this view, our reports concerning subjective experience are based on a metacognitive model of our own mental processes. In particular, AST proposes that subjective reports arise from an implicit model of our own <i>attentional</i> processes, computed in part to facilitate the effective control of attention. We tested and confirmed some of the predictions that follow from this view in a series of <a href="../files/manuscripts/awareness_attention.pdf">psychophysical experiments</a>, and identified some of the <a href="../files/manuscripts/awareness_networks.pdf">cortical networks involved in subjective visual awareness</a>. AST also suggests an interesting link between the <a href="../files/manuscripts/attributing_awareness.pdf">neural mechanisms supporting both subjective experience and social cognition</a>.
