--- a/publications/index.html
+++ b/publications/index.html
@@ -27,7 +27,7 @@
     </nav>
     <main>
         <div class='section-title'>Preprints</div>
-        <p class='publications'><b>Webb, T. W.</b>, Fu, S., Bihl, T., Holyoak, K. J., & Lu, H. (2022). Zero-shot visual reasoning through probabilistic analogical reasoning. <i>arXiv preprint</i>. <a href="../files/manuscripts/visiPAM.pdf">pdf</a></p>
+        <p class='publications'><b>Webb, T. W.</b>, Fu, S., Bihl, T., Holyoak, K. J., & Lu, H. (2022). Zero-shot visual reasoning through probabilistic analogical mapping. <i>arXiv preprint</i>. <a href="../files/manuscripts/visiPAM.pdf">pdf</a></p>
         <p class='publications'><b>Webb, T. W.</b>, Miyoshi, K., Yan So, T., Rajananda, S., & Lau, H. (2022). Natural statistics support a rational account of confidence biases. <i>bioRxiv preprint</i>. <a href="../files/manuscripts/rational_confidence.pdf">pdf</a></p>
 
         <div class='section-title'>Publications (Archival)</div>
@@ -35,7 +35,7 @@
         <p class='publications'><b>Webb, T. W.</b>, Dulberg, Z., Frankland, S. M., Petrov, A. A., O'Reilly, R. C., & Cohen, J. D. (2020). Learning representations that support extrapolation. In <i>37th International Conference on Machine Learning</i>. <a href="../files/manuscripts/learning_extrapolation.pdf">pdf</a></p>
         <p class='publications'>Wilterson, A. I., Kemper, C. M., Kim, N., <b>Webb, T. W.</b>, Reblando, A. M., & Graziano, M. S. A. (2020). Attention control and the attention schema theory of consciousness. <i>Progress in Neurobiology, 195</i>, 101844. <a href="../files/manuscripts/Wilterson_attention_2020.pdf">pdf</a></p>
         <p class='publications'>Guterstam, A., Kean, H. H., <b>Webb, T. W.</b>, Kean, F. S., & Graziano, M. S. A. (2019). Implicit model of other people’s visual attention as an invisible, force-carrying beam projecting from the eyes. <i>Proceedings of the National Academy of Sciences, 116</i>(1), 328-333. <a href="../files/manuscripts/Guterstam_eyebeams_2019.pdf">pdf</a></p>
-        <p class='publications'>Bio, B. J., <b>Webb, T. W.</b>, & Graziano, M. S. A, (2018). Projecting one’s own spatial bias onto others during a theory-of-mind task. <i>Proceedings of the National Academy of Sciences, 115</i>(7), E1684-E1689. <a href="../files/manuscripts/TOM_hemineglect.pdf">pdf</a></p>
+        <p class='publications'>Bio, B. J., <b>Webb, T. W.</b>, & Graziano, M. S. A. (2018). Projecting one’s own spatial bias onto others during a theory-of-mind task. <i>Proceedings of the National Academy of Sciences, 115</i>(7), E1684-E1689. <a href="../files/manuscripts/TOM_hemineglect.pdf">pdf</a></p>
         <p class='publications'><b>Webb, T. W.</b>, Igelstrom, K. M., Schurger, A., & Graziano, M. S. A. (2016). Cortical networks involved in visual awareness independent of visual attention. <i>Proceedings of the National Academy of Sciences, 113</i>(48), 13923-13928. <a href="../files/manuscripts/awareness_networks.pdf">pdf</a></p>
         <p class='publications'>Igelstrom, K. M., <b>Webb, T. W.</b>, & Graziano, M. S. A. (2016). Functional connectivity between the temporoparietal cortex and cerebellum in autism spectrum disorder. <i>Cerebral Cortex, 27</i>(4), 2617-2627. <a href="../files/manuscripts/TPJ_autism.pdf">pdf</a></p>
         <p class='publications'>Igelstrom, K. M., <b>Webb, T. W.</b>, Kelly, Y. T., & Graziano, M. S. A. (2016). Topographical organization of attentional, social and memory processes in the human temporoparietal cortex. <i>Eneuro, 3</i>(2). <a href="../files/manuscripts/TPJ_topography.pdf">pdf</a></p>
