adding LLM analogy paper

--- a/publications/index.html
+++ b/publications/index.html
@@ -27,6 +27,7 @@
     </nav>
     <main>
         <div class='section-title'>Preprints</div>
+        <p class='publications'><b>Webb, T. W.</b>, Holyoak, K. J., & Lu, H. (2022). Emergent analogical reasoning in large language models. <i>arXiv preprint</i>. <a href="../files/manuscripts/emergent_analogy_LLM.pdf">pdf</a></p>
         <p class='publications'><b>Webb, T. W.</b>, Fu, S., Bihl, T., Holyoak, K. J., & Lu, H. (2022). Zero-shot visual reasoning through probabilistic analogical mapping. <i>arXiv preprint</i>. <a href="../files/manuscripts/visiPAM.pdf">pdf</a></p>
         <p class='publications'><b>Webb, T. W.</b>, Miyoshi, K., Yan So, T., Rajananda, S., & Lau, H. (2022). Natural statistics support a rational account of confidence biases. <i>bioRxiv preprint</i>. <a href="../files/manuscripts/rational_confidence.pdf">pdf</a></p>
 
