updating research and publications

--- a/publications/index.html
+++ b/publications/index.html
@@ -27,11 +27,17 @@
     </nav>
     <main>
         <div class='section-title'>Preprints</div>
-        <p class='publications'><b>Webb, T. W.</b>, Holyoak, K. J., & Lu, H. (2022). Emergent analogical reasoning in large language models. <i>arXiv preprint</i>. <a href="../files/manuscripts/emergent_analogy_LLM.pdf">pdf</a></p>
-        <p class='publications'><b>Webb, T. W.</b>, Fu, S., Bihl, T., Holyoak, K. J., & Lu, H. (2022). Zero-shot visual reasoning through probabilistic analogical mapping. <i>arXiv preprint</i>. <a href="../files/manuscripts/visiPAM.pdf">pdf</a></p>
-        <p class='publications'><b>Webb, T. W.</b>, Miyoshi, K., Yan So, T., Rajananda, S., & Lau, H. (2022). Natural statistics support a rational account of confidence biases. <i>bioRxiv preprint</i>. <a href="../files/manuscripts/rational_confidence.pdf">pdf</a></p>
+        <p class='publications'><b>Webb, T. W.*</b>, Mondal, S. S.*, & Cohen, J. D. (2023). Systematic visual reasoning through object-centric relational abstraction. <i>arXiv preprint</i>. <a href="../files/manuscripts/OCRA.pdf">pdf</a></p>
+        <p class='publications'><i>* Equal contribution</i></p>
+        <p class='publications'>Altabaa, A., <b>Webb, T. W.</b>, Cohen, J. D., & Lafferty, J. (2023). Abstractors: Transformer Modules for Symbolic Message Passing and Relational Reasoning. <i>arXiv preprint</i>. <a href="../files/manuscripts/abstractors.pdf">pdf</a></p>
+        <p class='publications'>Mondal, S. S., Frankland, S. M., <b>Webb, T. W.</b>, & Cohen, J. D. (2023). Determinantal Point Process Attention Over Grid Codes Supports Out-of-Distribution Generalization. <i>arXiv preprint</i>. <a href="../files/manuscripts/DPP_A.pdf">pdf</a></p>
+        <p class='publications'>Frankland, S. M., <b>Webb, T. W.</b>, & Cohen, J. D. (2021). No Coincidence, George: Capacity-Limits as the Curse of Compositionality. <i>PsyArXiv preprint</i>. <a href="../files/manuscripts/CoC.pdf">pdf</a></p>
 
         <div class='section-title'>Publications (Archival)</div>
+        <p class='publications'><b>Webb, T. W.*</b>, Fu, S.*, Bihl, T., Holyoak, K. J., & Lu, H. (2023). Zero-shot visual reasoning through probabilistic analogical mapping. <i>Nature Communications, 15</i>, 5144. <a href="../files/manuscripts/visiPAM.pdf">pdf</a></p>
+        <p class='publications'><b>Webb, T. W.</b>, Holyoak, K. J., & Lu, H. (2023). Emergent analogical reasoning in large language models. <i>Nature Human Behaviour</i>. <a href="../files/manuscripts/emergent_analogy_LLM.pdf">pdf</a></p>
+        <p class='publications'><b>Webb, T. W.</b>, Miyoshi, K., Yan So, T., Rajananda, S., & Lau, H. (2023). Natural statistics support a rational account of confidence biases. <i>Nature Communications, 14</i>, 3992. <a href="../files/manuscripts/rational_confidence.pdf">pdf</a></p>
+        <p class='publications'>Mondal, S. S.*, <b>Webb, T. W.*</b>, & Cohen, J. D. (2023). Learning to reason over visual objects. In <i>11th International Conference on Learning Representations</i>. <a href="../files/manuscripts/object_centric_RPM.pdf">pdf</a></p>
         <p class='publications'><b>Webb, T. W.</b>, Sinha, I., & Cohen, J. D. (2021). Emergent symbols through binding in external memory. In <i>9th International Conference on Learning Representations</i>. <a href="../files/manuscripts/emergent_symbols.pdf">pdf</a></p>
         <p class='publications'><b>Webb, T. W.</b>, Dulberg, Z., Frankland, S. M., Petrov, A. A., O'Reilly, R. C., & Cohen, J. D. (2020). Learning representations that support extrapolation. In <i>37th International Conference on Machine Learning</i>. <a href="../files/manuscripts/learning_extrapolation.pdf">pdf</a></p>
         <p class='publications'>Wilterson, A. I., Kemper, C. M., Kim, N., <b>Webb, T. W.</b>, Reblando, A. M., & Graziano, M. S. A. (2020). Attention control and the attention schema theory of consciousness. <i>Progress in Neurobiology, 195</i>, 101844. <a href="../files/manuscripts/Wilterson_attention_2020.pdf">pdf</a></p>
