--- a/publications/index.html
+++ b/publications/index.html
@@ -28,7 +28,7 @@
     <main>
         <div class='section-title'>Preprints</div>
         <p class='publications'><u><b>Webb, T. W.</b></u>, Frankland, S. M., Altabaa, A., Krishnamurthy, K., Campbell, D., Russin, J., O'Reilly, R., Lafferty, J., & Cohen, J. D. (2023). The relational bottleneck as an inductive bias for efficient abstraction. <i>arXiv preprint</i>. <a href="../files/manuscripts/relational_bottleneck.pdf">pdf</a></p>
-        <p class='publications'><u><b>Webb, T. W.*</b></u>, Mondal, S. S.*, Wang, C., Krabach, B., & Momennejad, I. (2023). A Prefrontal Cortex-inspired Architecture for Planning in Large Language Models.</p>
+        <p class='publications'><u><b>Webb, T. W.*</b></u>, Mondal, S. S.*, Wang, C., Krabach, B., & Momennejad, I. (2023). A Prefrontal Cortex-inspired Architecture for Planning in Large Language Models. <i>arXiv preprint</i>. <a href="../files/manuscripts/LLM_PFC.pdf">pdf</a></p>
         <p class='publications'><i>* Equal contribution</i></p>
         <p class='publications'>Altabaa, A., <u><b>Webb, T. W.</b></u>, Cohen, J. D., & Lafferty, J. (2023). Abstractors: Transformer Modules for Symbolic Message Passing and Relational Reasoning. <i>arXiv preprint</i>. <a href="../files/manuscripts/abstractors.pdf">pdf</a></p>
         <p class='publications'>Frankland, S. M., <u><b>Webb, T. W.</b></u>, & Cohen, J. D. (2021). No Coincidence, George: Capacity-Limits as the Curse of Compositionality. <i>PsyArXiv preprint</i>. <a href="../files/manuscripts/CoC.pdf">pdf</a></p>
